CHANGES.txt - 2007-08-08
------------------------


CHANGES IN CUPS V1.3.0

	- "AuthType Default" did not work as expected when the
	  "DefaultAuthType foo" line appeared after it in the
	  cupsd.conf file.
	- The on-line help did not describe many common printing
	  options (STR #1846)
	- The IPP backend did not return the "auth required" status
	  when printing to a Kerberos-protected queue.
	- The scheduler was not looking in the correct directories
	  for LSB PPD files (STR #2464)
	- Changed references to ESP Ghostscript to GPL Ghostscript
	  (STR #2463)
	- The PostScript filter did not cleanly terminate when
	  the job was canceled or stopped.
	- Fixed generation of Kerberos credentials for remote
	  printing.  Note that this requires a recent version of
	  MIT Kerberos with a working krb5_cc_new_unique()
	  function or Heimdal Kerberos.
	- Added Portuguese and updated Italian message catalogs.


CHANGES IN CUPS V1.3rc2

	- Added more range checking to the pdftops filter. 
	- The scheduler would crash if a remote IPP queue was stopped
	  (STR #2460)
	- The scheduler did not allow "DefaultAuthType None".


CHANGES IN CUPS V1.3rc1

	- Updated the German localization (STR #2443)
	- cupsAdminGetServerSettings() did not handle </Foo> properly.
	- When lprm and cancel are run with no job ID, they now will
	  cancel the first stopped job if no pending or processing
	  jobs are left in the queue.
	- The scheduler now logs successful print jobs, filter
	  failures, and the job file types at the default log
	  level (STR #2458)
	- The scheduler now logs the usernames it is using for
	  authorization at LogLevel debug instead of debug2 (STR #2448)
	- Added Intellitech Intellibar and Zebra CPCL PPDs to the list
	  of installed PPDs.
	- Added 6" and 8" wide label sizes for the Zebra ZPL Label
	  Printer driver (STR #2442)
	- The cupsaddsmb program and web interface now support
	  exporting of 64-bit Windows drivers, when available
	  (STR #2439)